# LCE

./: .env  ARCHITECTURE.md  Dockerfile  README.md  conftest.py  main.py  pyproject.toml  pytest.ini
backend/ai/llm/chat_models/: llm_open_ai.py
backend/ai/llm/llm_factory/: llm_factory.py
shared/app_logger/: app_logger.py
shared/consts/: const_config.py
shared/utils/: utils.py
src/backend/ai/llm/chat_models/: llm_any.py  llm_ollama.py  llm_open_ai.py
src/backend/ai/llm/llm_factory/: llm_factory.py
src/backend/ai/llm/mcp/: mcp_tool.py
src/backend/ai/rag/chunking/: chunk_documents.py
src/backend/ai/rag/vector_store/: in_memory_faiss.py
src/backend/ai/token/: token.py
src/shared/app_logger/: app_logger.py
src/shared/consts/: const_config.py
src/shared/content_reader/file_io/: env_reader.py  pdf_reader.py  reader.py  reader_env.py
src/shared/content_writer/file_io/: writer.py  writer_config.py
src/shared/utils/: utils.py
src/web_api/: app.py
tests/unit/agents/: test_agent_usage.py
tests/unit/content_reader/: test_pdf_reader.py  test_port_env_ini.py
tests/unit/models/: test_lc_ollama.py  test_lc_personal_openai.py  test_lc_platform_provider_open_ai.py  test_llm_factory.py  test_ollama.py  test_openai.py
tests/unit/rag/: test_rag.py  test_rag_no_lang_chain.py  test_rag_web_site.py
